--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,23 @@
+.contenedor {
+  max-width: 1100px;
+  margin: 0 auto;
+}
 
 h1 {
-    text-align: center;
-    font-size: 2.4rem;
-    font-weight: 300;
-}
-.contenedor {
-    max-width: 1100px;
-    margin: 0 auto;
+  text-align: center;
+  font-size: 2.4rem;
+  font-weight: 300;
 }
 
 .blog {
-    display: flex;
-    flex-flow: wrap;
-    max-height: 4500px;
+  display: flex;
+  flex-flow: wrap;
+  max-height: 4500px;
 }
 
 .entrada {
-    margin: .5rem;
-    width: calc(50% - 1rem);
+  margin: .5rem;
+  width: calc(50% - 1rem);
 }
 
 @media screen and (min-width: 768px) {
@@ -28,7 +28,29 @@ h1 {
         width: calc(20% - 1rem);
     }
 }
+
 .entrada img {
     max-width: 100%;
     cursor: pointer;
 }
+
+.contenedor .modal-form .image-text {
+    position: relative;
+}
+
+.image-text .top-text {
+    position: absolute; 
+    top: 1rem;
+    left: 5rem;
+    font-family:"vedana"; 
+    background:rgba(251,251,251,0.5);
+}
+
+.image-text .bottom-text {
+    position: absolute; 
+    top: 10.5rem;
+    left: 5rem;
+    font-family:"vedana";
+    background:rgba(251,251,251,0.5);
+}
+
